<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >


            <ImageView
                android:id="@+id/Title1"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:paddingBottom="40dp"
                android:src="@drawable/logoneofinca" />

            <TextView
                android:id="@+id/label_useremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textEmailAddress" />


            <TextView
                android:id="@+id/label_user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_pass" />

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>



            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>