<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_tel" />

            <EditText
                android:id="@+id/user_tel_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="phone"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_email" />

            <EditText
                android:id="@+id/user_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Antigua contraseña" />

            <EditText
                android:id="@+id/user_pass_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nueva contraseña" />

            <EditText
                android:id="@+id/user_pass_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirma la nueva contraseña" />

            <EditText
                android:id="@+id/user_pass_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/error_message"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>


            <Button
                android:id="@+id/register_page_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="Guardar cambios"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/background_light" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/menu_nav"
        >
    </android.support.design.widget.NavigationView>



</android.support.v4.widget.DrawerLayout>